--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="flex items-center justify-center h-screen">
     <div class=" max-w-lg  bg-white shadow-lg rounded-lg overflow-hidden">
-        <div class="bg-blue-600 text-white px-6 py-2">
+        <div class="bg-gradient-to-r from-purple-500 to-pink-500 text-white px-6 py-2">
             <h1 class="text-3xl ml-10 font-extrabold">Banking System</h1>
         </div>
         
