all project complete

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
         document.getElementById('applyInterest').addEventListener('click',function() {
             const interest = balance * 5 /100 * 2;
-             document.getElementById('interestDisplay').textContent = interest;
+             document.getElementById('interestDisplay').textContent = `5% Intarest balance: $${interest.toFixed(2)}`;
         });
 
     </script>
