--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body class="flex items-center justify-center h-screen">
-    <div class=" max-w-lg  bg-white shadow-lg rounded-lg overflow-hidden">
+    <div class=" max-w-lg  bg-white shadow-lg rounded-lg overflow-hidden h-screen">
         <div class="bg-gradient-to-r from-purple-500 to-pink-500 text-white px-6 py-1">
             <h1 class="text-3xl ml-10 font-extrabold">Banking System</h1>
         </div>
